--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,4 @@
 # Fix copy/paste on macOS
 set-option -g default-command 'reattach-to-user-namespace -l bash'
+# Fix ESC delay
+set -s escape-time 0
