tmux: split windows in the same folder

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,9 @@
 # Fix copy/paste on macOS
 set-option -g default-command 'reattach-to-user-namespace -l bash'
+
 # Fix ESC delay
 set -s escape-time 0
+
+# Split windows in the same folder
+bind '"' split-window -c "#{pane_current_path}"
+bind "%" split-window -h -c "#{pane_current_path}"
